--- a/src/assets/less/utilities/typography.less
+++ b/src/assets/less/utilities/typography.less
@@ -46,8 +46,10 @@
 
 // text transform
 
-.tt-uc { text-transform: uppercase !important; }
-.tt-lc { text-transform: lowercase !important; }
+.tt-cp   { text-transform: capitalize !important; }
+.tt-lc   { text-transform: lowercase !important; }
+.tt-none { text-transform: none !important; }
+.tt-uc   { text-transform: uppercase !important; }
 
 // text alignment
 
