--- a/src/assets/less/utilities/styling.less
+++ b/src/assets/less/utilities/styling.less
@@ -1,6 +1,6 @@
 /** styling.less */
 
-// border
+// standard border
 
 .b-0   { border: 0 !important; }
 .b-t-0 { border-top: 0 !important; }
@@ -12,6 +12,12 @@
 .b-r   { border-right: @color-main-23 1px solid !important; }
 .b-b   { border-bottom: @color-main-23 1px solid !important; }
 .b-l   { border-left: @color-main-23 1px solid !important; }
+
+// border-width
+
+.bw-1 { border-width: 1px !important; }
+.bw-2 { border-width: 2px !important; }
+.bw-3 { border-width: 4px !important; }
 
 // border radius
 
@@ -41,7 +47,7 @@
 .tsh-none { text-shadow: none !important; }
 .tsh      { text-shadow: 0 1px 0 fade(@color-main-3,50%) !important; }
 
-// text and background colors
+// background, border and text colors
 
 .generate_colors (@i) when (@i > 0) {
 
@@ -59,6 +65,19 @@
     .bg-purple-@{i}     { background: ~"@{purple-@{i}}" !important; }
     .bg-red-@{i}        { background: ~"@{red-@{i}}" !important; }
     .bg-yellow-@{i}     { background: ~"@{yellow-@{i}}" !important; }
+    
+    // border colors
+
+    .bc-attention-@{i}  { border-color: ~"@{color-attention-@{i}}" !important; }
+    .bc-blue-@{i}       { border-color: ~"@{blue-@{i}}" !important; }
+    .bc-gray-@{i}       { border-color: ~"@{gray-@{i}}" !important; }
+    .bc-green-@{i}      { border-color: ~"@{green-@{i}}" !important; }
+    .bc-main-@{i}       { border-color: ~"@{color-main-@{i}}" !important; }
+    .bc-negative-@{i}   { border-color: ~"@{color-negative-@{i}}" !important; }
+    .bc-positive-@{i}   { border-color: ~"@{color-positive-@{i}}" !important; }
+    .bc-purple-@{i}     { border-color: ~"@{purple-@{i}}" !important; }
+    .bc-red-@{i}        { border-color: ~"@{red-@{i}}" !important; }
+    .bc-yellow-@{i}     { border-color: ~"@{yellow-@{i}}" !important; }
 
     // text colors
 
