text color tweak

--- a/src/assets/less/elements/filters.less
+++ b/src/assets/less/elements/filters.less
@@ -155,6 +155,7 @@
     // counter
 
     .filter__counter {
+        color: @color-main-15;
         position: absolute;
         right: .5rem;
         top: .5rem;
