--- a/src/assets/less/elements/rating.less
+++ b/src/assets/less/elements/rating.less
@@ -78,6 +78,22 @@
 
 }
 
+.rating--medium {
+
+    text-indent: -1px;
+
+    .rating__stars {
+
+        &::before,
+        &::after {
+            font-size: 24px;
+            letter-spacing: -2px;
+        }
+
+    }
+
+}
+
 .rating--large {
 
     line-height: 40px;
