--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -24415,6 +24415,14 @@ a.radioBtn {
   font-size: 18px;
   letter-spacing: -2px;
 }
+.rating--medium {
+  text-indent: -1px;
+}
+.rating--medium .rating__stars::before,
+.rating--medium .rating__stars::after {
+  font-size: 24px;
+  letter-spacing: -2px;
+}
 .rating--large {
   line-height: 40px;
   text-indent: -2px;
