--- a/src/templates/pages/elements/filterBtn.html
+++ b/src/templates/pages/elements/filterBtn.html
@@ -18,7 +18,7 @@ Button filters can be used in **two different ways**. The **default** logic is a
 
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
-        {{ filterBtns.build() }}
+        {{ filterBtns.render() }}
     </div>
 </div>
 
@@ -29,7 +29,7 @@ By adding the modifier `.filterBtns--removeable`, the button filters turn into s
 
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
-        {{ filterBtns.build({ modifiers: 'filterBtns--removeable' }) }}
+        {{ filterBtns.render(modifiers='filterBtns--removeable') }}
     </div>
 </div>
 
@@ -41,12 +41,12 @@ In addition to `.filterBtns--removeable`, a **dark styling** is available via `.
 <div class="documentation__blocks">
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup; print:true;">
-            {{ filterBtns.build({ modifiers: 'filterBtns--dark' }) }}
+            {{ filterBtns.render(modifiers='filterBtns--dark') }}
         </div>
     </div>
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup; print:true;">
-            {{ filterBtns.build({ modifiers: 'filterBtns--dark filterBtns--removeable' }) }}
+            {{ filterBtns.render(modifiers='filterBtns--dark filterBtns--removeable') }}
         </div>
     </div>
 </div>
