--- a/src/templates/pages/elements/filters.html
+++ b/src/templates/pages/elements/filters.html
@@ -17,7 +17,7 @@
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="w-40">
-            {{ filters.build({ searchDisplay: '#searchDisplay' }) }}
+            {{ filters.render(searchDisplay='#searchDisplay') }}
         </div>
         <div class="box box--2 m-t-4 pos-rel h-30 w-40 p-4" id="#searchDisplay">Search Result</div>
     </div>
