--- a/src/templates/pages/elements/imgMagnifier.html
+++ b/src/templates/pages/elements/imgMagnifier.html
@@ -18,12 +18,12 @@ See the following examples for markup reference. Notice how this element impleme
 <div class="documentation__blocks">
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup; print:true;">
-            {{ imgMagnifier.build({ previewImgPath: 'https://unsplash.it/300/300/?image=14', zoomImgPath: 'https://unsplash.it/1000/1000/?image=14' }) }}
+            {{ imgMagnifier.render(previewImgPath='https://unsplash.it/300/300/?image=14', zoomImgPath='https://unsplash.it/1000/1000/?image=14') }}
         </div>
     </div>
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup; print:true;">
-            {{ imgMagnifier.build() }}
+            {{ imgMagnifier.render() }}
         </div>
     </div>
 </div>
