--- a/src/assets/less/utilities/interaction.less
+++ b/src/assets/less/utilities/interaction.less
@@ -37,16 +37,16 @@
     
     // border colors
 
-    .hvr-b-attention-@{i}:hover   { border-color: ~"@{color-attention-@{i}}" !important; }
-    .hvr-b-blue-@{i}:hover        { border-color: ~"@{blue-@{i}}" !important; }
-    .hvr-b-gray-@{i}:hover        { border-color: ~"@{gray-@{i}}" !important; }
-    .hvr-b-green-@{i}:hover       { border-color: ~"@{green-@{i}}" !important; }
-    .hvr-b-main-@{i}:hover        { border-color: ~"@{color-main-@{i}}" !important; }
-    .hvr-b-negative-@{i}:hover    { border-color: ~"@{color-negative-@{i}}" !important; }
-    .hvr-b-positive-@{i}:hover    { border-color: ~"@{color-positive-@{i}}" !important; }
-    .hvr-b-purple-@{i}:hover      { border-color: ~"@{purple-@{i}}" !important; }
-    .hvr-b-red-@{i}:hover         { border-color: ~"@{red-@{i}}" !important; }
-    .hvr-b-yellow-@{i}:hover      { border-color: ~"@{yellow-@{i}}" !important; }
+    .hvr-bc-attention-@{i}:hover   { border-color: ~"@{color-attention-@{i}}" !important; }
+    .hvr-bc-blue-@{i}:hover        { border-color: ~"@{blue-@{i}}" !important; }
+    .hvr-bc-gray-@{i}:hover        { border-color: ~"@{gray-@{i}}" !important; }
+    .hvr-bc-green-@{i}:hover       { border-color: ~"@{green-@{i}}" !important; }
+    .hvr-bc-main-@{i}:hover        { border-color: ~"@{color-main-@{i}}" !important; }
+    .hvr-bc-negative-@{i}:hover    { border-color: ~"@{color-negative-@{i}}" !important; }
+    .hvr-bc-positive-@{i}:hover    { border-color: ~"@{color-positive-@{i}}" !important; }
+    .hvr-bc-purple-@{i}:hover      { border-color: ~"@{purple-@{i}}" !important; }
+    .hvr-bc-red-@{i}:hover         { border-color: ~"@{red-@{i}}" !important; }
+    .hvr-bc-yellow-@{i}:hover      { border-color: ~"@{yellow-@{i}}" !important; }
 
 }
 .generate_hvrStyles(25);
@@ -56,6 +56,9 @@
 
 .hvr-tc-transparent:hover { color: @color-transparent !important; }
 .hvr-tc-white:hover       { color: #fff !important; }
+
+.hvr-bc-transparent:hover { border-color: @color-transparent !important; }
+.hvr-bc-white:hover       { border-color: #fff !important; }
 
 // text decoration
 
