--- a/src/assets/less/elements/linklist.less
+++ b/src/assets/less/elements/linklist.less
@@ -15,14 +15,14 @@
 
 .linkList__item {
 
-    border-top: @color-main-24 1px solid;
+    border-bottom: @color-main-24 1px solid;
     margin: 0;
     padding: 0;
     list-style: none;
     display: block;
 
-    &:first-child {
-        border-top: 0;
+    &:last-child {
+        border-bottom: 0;
     }
 
 }
@@ -41,13 +41,32 @@
         color: @color-main-8;
         text-decoration: none;
     }
+    
+    // hover
 
     &:hover {
         background: @color-main-24;
     }
     
+    // active / selected
+    
     .linkList__item--active & {
-        background: @color-main-23;
+        background: @color-main-8;
+        color: @color-main-25;
+    }
+    
+    // icon
+    
+    &::after {
+        color: @color-main-21;
+    }
+    
+    &:hover::after {
+        color: @color-main-8;
+    }
+    
+    .linkList__item--active &:hover::after {
+        color: @color-main-25;
     }
 
 }
@@ -60,32 +79,17 @@
 .linkList--arrowsRightUp {
 
     .linkList__link::after {
-        color: @color-main-18;
+        .mixin-icon;
         font-size: 2.4rem;
         margin-top: -1.6rem;
         position: absolute;
         top: 50%;
     }
 
-    .linkList__link:hover::after {
-        color: @color-main-8;
-    }
-
 }
 
 // modifiers
 // =========
-
-// selected link
-
-// .linkList__item--active .linkList__link,
-// .linkList--transparent .linkList__item--active .linkList__link {
-//     background: @color-main-23;
-// }
-
-// .linkList--dark .linkList__item--active .linkList__link {
-//     background: @color-main-8;
-// }
 
 // no border, no rounded corners
 
@@ -107,7 +111,7 @@
 
     background-color: @color-main-10;
     border-color: @color-main-8;
-
+    
     .linkList__item {
         border-color: @color-main-9;
     }
@@ -124,24 +128,29 @@
     }
     
     .linkList__item--active .linkList__link {
-        background: @color-main-8;
+        background: @color-main-25;
+        color: @color-main-8;
     }
 
-    // icon color
+    // icon
 
     &.linkList--arrowsRight,
     &.linkList--arrowsLeft,
     &.linkList--arrowsRightDown,
     &.linkList--arrowsRightUp {
 
-        a::after {
+        .linkList__link::after {
             color: @color-main-15;
         }
 
-        a:hover::after {
+        .linkList__link:hover::after {
             color: @color-main-25;
         }
-
+        
+        .linkList__item--active .linkList__link:hover::after {
+            color: @color-main-8;
+        }
+    
     }
 
 }
@@ -189,14 +198,8 @@
     // icon
 
     .linkList__link::after {
-        .mixin-icon;
-        color: @color-main-21;
         content: '\f007';
-        font-size: 2.4rem;
-        margin-top: -1.6rem;
-        position: absolute;
         right: 0;
-        top: 50%;
     }
 
 }
@@ -214,14 +217,8 @@
     // icon
 
     .linkList__link::after {
-        .mixin-icon;
-        color: @color-main-21;
         content: '\f008';
-        font-size: 2.4rem;
         left: 0;
-        margin-top: -1.6rem;
-        position: absolute;
-        top: 50%;
     }
 
 }
@@ -239,13 +236,8 @@
     // icon
 
     .linkList__link::after {
-        .mixin-icon;
         content: '\f009';
-        font-size: 2.4rem;
-        margin-top: -1.6rem;
-        position: absolute;
         right: 0;
-        top: 50%;
     }
 
 }
