--- a/src/templates/pages/elements/popOver.html
+++ b/src/templates/pages/elements/popOver.html
@@ -127,11 +127,21 @@ To create a **new context for positioning**, set the option `wrap`to true. The f
 Use the option `toggleClass` to **add any css class name to the trigger** when the menu is visible.
 {% endmarkdown %}
 
-<div class="documentation__block">
-    <div class="documentation__example" data-printcode="language:markup; print:true;">
-        <a href="#examplePopOver-6" class="btn btn--large" data-popover="target:#examplePopOver-6; toggleClass:btn--dark;">Change trigger class name</a>
-        <div class="popOver" id="examplePopOver-6">
-            <p class="p-4 fs-15 lh-20">Hello.</p>
+<div class="documentation__blocks">
+    <div class="documentation__block">
+        <div class="documentation__example" data-printcode="language:markup; print:true;">
+            <a href="#examplePopOver-6" class="btn btn--large" data-popover="target:#examplePopOver-6-a; toggleClass:btn--positive;">Change trigger class name</a>
+            <div class="popOver" id="examplePopOver-6-a">
+                <p class="p-4 fs-15 lh-20">Hello.</p>
+            </div>
+        </div>
+    </div>
+    <div class="documentation__block">
+        <div class="documentation__example" data-printcode="language:markup; print:true;">
+            <a href="#examplePopOver-6" class="btn btn--large" data-popover="target:#examplePopOver-6-b; toggleClass:btn--attention;">Change trigger class name</a>
+            <div class="popOver" id="examplePopOver-6-b">
+                <p class="p-4 fs-15 lh-20">Howdy.</p>
+            </div>
         </div>
     </div>
 </div>
