--- a/src/templates/pages/theme/colors.html
+++ b/src/templates/pages/theme/colors.html
@@ -88,7 +88,7 @@ In addition to the Less color variables (which can only be used in Less style sh
     </div>
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup; print:true;">
-            <span class="bg-main-10 tc-white p-2">White on dark blue</span>
+            <span class="bg-red-10 tc-white p-2">White on medium red</span>
         </div>
     </div>
 </div>
