cleaned up color vars/utilities

--- a/src/assets/less/theme/colors.less
+++ b/src/assets/less/theme/colors.less
@@ -127,9 +127,14 @@
 
 // other color variables
 
-@color-transparent:        rgba(255,255,255,0);
+@color-black:              #111;
 @color-gold:               #eac310;
 @color-price:              @red-15;
+@color-transparent:        rgba(255,255,255,0);
+@color-white:              white;
+
+// deprecated
+
 @color-pharmacy:           #fe0011;
 @color-prescriptionPink-1: #bb4473;
 @color-prescriptionPink-2: #e7aac0;
